--- a/index.html
+++ b/index.html
@@ -38,9 +38,8 @@
             <div class="row align-items-center">
 
                 <div class="col-lg-2 col-6">
-                    <div class="header-logo">在这里祝福我的好朋友</div>
-					<div class="header-logo"><a href="https://space.bilibili.com/678417724">超级非酋难酱</div>
-					<div class="header-logo">生日快乐</div>
+                    <div class="header-logo">
+					<div class="header-logo">一只问号丫的小站</div>
                 </div>
 
                 <div class="col-lg-10 col-6">
