--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
             <div class="row align-items-center">
 
                 <div class="col-lg-2 col-6">
-                    <div class="header-logo">
 					<div class="header-logo">一只问号丫的小站</div>
                 </div>
 
@@ -49,7 +48,7 @@
                                 <li class="has-dropdown"><a href=".\index.html">我的项目</a>
                                     <ul class="sub-menu">
                                         <li><a href=".\project\muyu.html">电子木鱼</a></li>
-                                        <li><a href=".\project\qidai.html">敬请期待</a></li>
+                                        <li><a href=".\wallpaper">壁纸</a></li>
                                         <li><a href=".\project\qidai.html">敬请期待</a></li>
                                         <li><a href=".\project\qidai.html">敬请期待</a></li>
                                         <li><a href=".\project\qidai.html">敬请期待</a></li>
