增加了有趣的
十分有趣哦

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                                 <li class="has-dropdown"><a href=".\index.html">我的项目</a>
                                     <ul class="sub-menu">
                                         <li><a href=".\project\muyu.html">电子木鱼</a></li>
-                                        <li><a href=".\wallpaper">壁纸</a></li>
+                                        <li><a href=".\project\qidai.html">敬请期待</a></li>
                                         <li><a href=".\project\qidai.html">敬请期待</a></li>
                                         <li><a href=".\project\qidai.html">敬请期待</a></li>
                                         <li><a href=".\project\qidai.html">敬请期待</a></li>
@@ -225,18 +225,18 @@
                 <!-- single-property Start -->
                 <div class="single-property mt-30">
                     <div class="property-img">
-                        <a href=".\project\qidai.html">
+                        <a href="https://apd-vlive.apdcdn.tc.qq.com/vhot2.qqvideo.tc.qq.com/AcjZN73NEqGXEliARsybt-ueJM-ioIa12WBWwH2LGAV8/B_9LhzPzw8agpeEeKUHV_JXu-UckhwV3Z2UBtrEJKUCXQ/svp_50069/gzc_1000035_0bc3qqbemaacvuafe3fml5sjpbgdi2caersa.f206310.mp4?sdtfrom=v1104&guid=8c03e4ed2a922d517fede4dbd3410e7b&vkey=727810345FF1163D6E2F329A989EA675EE6B66219533A083CAA2BC92C4894D4F02840160A8E3DF73CFA87FAA0CE35D16C7AEB6D49D6A61CF56C2637487EADBFB498441AFE8B589F432F3B6FB1E36DEDF81A49C9BE535AF27BE758DFB11EDC0EE1DEF22DBC5014404CD297C39DA2B30E4D924308C2497313639663BB9A6D8093AD21FE514015B3684">
                             <img src="./index_files/qidai.png" alt="">
                         </a>
                     </div>
                     <div class="property-desc">
-                        <h4><a href=".\project\qidai.html">敬请期待</a></h4>
+                        <h4><a href=".\project\qidai.html">点击就去</a></h4>
                         <p>
-                            <span class="location">模拟《原神》豪鼓祭演活动</span>
+                            <span class="location">带我去看点刺激的</span>
                             <span class="property-info"></span>
                         </p>
                         <div class="price-box">
-                            <p>豪鼓祭演模拟器</p>
+                            <p>刺激的</p>
                         </div>
                     </div>
                 </div><!-- single-property End -->
